# MusicPlayer2

./: .gitattributes  .gitignore  .gitmodules  LICENSE  MusicPlayer2.sln  README.md  README_en-us.md  version.info
.github/workflows/: ci.yaml
Documents/: Introduction.md  skin.xsd  update_log.md  update_log_en-us.md
MusicPlayer2/: AboutDlg.cpp  AboutDlg.h  AcceleratorRes.cpp  AcceleratorRes.h  AddToPlaylistDlg.cpp  AddToPlaylistDlg.h  AlbumCoverInfoDlg.cpp  AlbumCoverInfoDlg.h  AllMediaDlg.cpp  AllMediaDlg.h  AppearanceSettingDlg.cpp  AppearanceSettingDlg.h  AudioCommon.cpp  AudioCommon.h  AudioTag.cpp  AudioTag.h  AudioTagOld.cpp  AudioTagOld.h  BASSEncodeLibrary.cpp  BASSEncodeLibrary.h  BASSMidiLibrary.cpp  BASSMidiLibrary.h  BASSWmaLibrary.cpp  BASSWmaLibrary.h  BaseDialog.cpp  BaseDialog.h  BassCore.cpp  BassCore.h  BassFxLibrary.cpp  BassFxLibrary.h  BassMixLibrary.cpp  BassMixLibrary.h  BrowseEdit.cpp  BrowseEdit.h  CDevicesManager.cpp  CDevicesManager.h  CDonateDlg.cpp  CDonateDlg.h  CFloatPlaylistDlg.cpp  CFloatPlaylistDlg.h  (+393 more)
MusicPlayer2/UIDialog/: UIDialog.cpp  UIDialog.h  UITestDialog.cpp  UITestDialog.h
MusicPlayer2/UIElement/: AbstractCheckButton.cpp  AbstractCheckButton.h  AbstractListElement.cpp  AbstractListElement.h  AbstractScrollArea.cpp  AbstractScrollArea.h  AbstractToggleButton.cpp  AbstractToggleButton.h  AbstractTracksList.cpp  AbstractTracksList.h  AlbumCover.cpp  AlbumCover.h  AllTracksList.cpp  AllTracksList.h  BeatIndicator.cpp  BeatIndicator.h  Button.cpp  Button.h  CheckBox.cpp  CheckBox.h  ClassicalControlBar.cpp  ClassicalControlBar.h  ComboBox.cpp  ComboBox.h  EditControl.cpp  EditControl.h  ElementFactory.cpp  ElementFactory.h  ElementSwitcher.cpp  ElementSwitcher.h  FolderExploreTree.cpp  FolderExploreTree.h  IconElement.cpp  IconElement.h  Layout.cpp  Layout.h  ListElement.cpp  ListElement.h  LyricsElement.cpp  LyricsElement.h  (+60 more)
MusicPlayer2/UIPanel/: ListPreviewPanel.cpp  PanelManager.h  (+10 more)
UnitTest/: UnitTest.vcxproj  UnitTest.vcxproj.filters  stdafx.cpp  stdafx.h  unittest1.cpp
UpdateLog/: update_log.md  update_log_en-us.md
ffmpeg_core/: CMakeLists.txt  FFMPEG_CORE_VERSION.cmake  README.md  ffmpeg_core.h  ffmpeg_core.rc.in  ffmpeg_core_version.h.in
ffmpeg_core/cmake/: FindAVCODEC.cmake  FindAVDEVICE.cmake  FindAVFILTER.cmake  FindAVFORMAT.cmake  FindAVUTIL.cmake  FindSWRESAMPLE.cmake
ffmpeg_core/src/: cda.c  cda.h  core.cpp  core.h  decode.c  decode.h  equalizer.c  equalizer.h  equalizer_settings.cpp  equalizer_settings.h  fft_data.c  fft_data.h  file.cpp  file.h  filter.c  filter.h  loop.c  loop.h  open.c  open.h  output.c  output.h  speed.c  speed.h  volume.c  volume.h
(+245 files in other folders)
